<?xml version="1.0"?>
<package format="3">
  <name>sentry_interfaces</name>
  <version>0.0.1</version>
  <description>Custom interfaces for sentry perception system</description>

  <maintainer email="you@example.com">CHEN XIN</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
